<resources>
    <string name="app_name">萌宝宝</string>
    <string name="input_phone_hint">手机号</string>
    <string name="input_pwd_hint">密码（6~16位数字、字母）</string>
    <string name="input_new_pwd_hint">新密码（6~16位数字、字母）</string>
    <string name="input_vc_hint">短信验证码</string>
    <string name="get_vc">获取验证码</string>
    <string name="replay">重试</string>
    <string name="prompt_read_agreement">我已阅读同意萌宝宝用户协议</string>
    <string name="complete">完成</string>
    <string name="mark">*</string>
    <string name="title_save">保存</string>
    <string name="prompt_read_agree">我已阅读同意</string>
    <string name="prompt_agreement">萌宝宝用户协议</string>
    <string name="guide_register">注册</string>
    <string name="guide_login">登录</string>
    <string name="login_name">登录</string>
    <string name="sure">确认</string>
    <string name="fast_registe">快速注册</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="register_name">注   册</string>
    <string name="commit">提交</string>
    <string name="change_pwd_name">设置新密码</string>
    <string name="loading_message">0~3岁婴幼儿生长发育管理专家</string>
    <string name="home_page">首页</string>
    <string name="baby_knowledge">月龄指导</string>
    <string name="spacialist_service">专家服务</string>
    <string name="hospital_report">医院报告</string>
    <string name="meng_lesson">萌课堂</string>
    <string name="home_page_observe_point">观察要点</string>
    <string name="home_page_observe_point_content">宝妈，您有注意到宝宝的这些变化吗？</string>
    <string name="home_page_doctor_list">萌宝宝医生</string>
    <string name="home_page_doctor_list_content">宝妈，你可以为您的宝宝选择专属医生</string>
    <string name="home_page_month_age">%s月%s日</string>
    <string name="spacialist_service_buy">购买</string>
    <string name="spacialist_service_count">您还剩%s次测评</string>
    <string name="slogan">宝宝生长发育好不好，\n可以请儿保专家来评估一下哦！</string>
    <string name="add_record">增加新记录</string>
    <string name="appraisal_result">测评结果</string>
    <string name="appraisal_date">测评时间</string>
    <string name="appraisal_month">测评时月龄</string>
    <string name="spacialist_location_failed">定位失败，请点击重试GPS定位</string>
    <string name="item_record_unread">未读</string>
    <string name="agreement_name">使用协议</string>
    <string name="mark_read">我已阅读</string>
    <string name="person_center">个人中心</string>
    <string name="shop">购买服务</string>
    <string name="contact">客服中心</string>
    <string name="about">关于我们</string>
    <string name="setting">设置</string>
    <string name="base_info">基本信息</string>
    <string name="parent_info">父母信息</string>
    <string name="apply_refund">申请退款</string>
    <string name="contact_hotline">客服热线</string>
    <string name="contact_hotline_phone">021–64335531</string>
    <string name="contact_work_time">周一至周五9:00~17:00</string>
    <string name="about_company_name">上海豆蒙萌健康管理咨询有限公司</string>
    <string name="about_company_location">上海市南丹东路300弄9号楼409室</string>
    <string name="about_company_phone">021-64335531</string>
    <string name="about_company_mail">customerservice@mengbaobao.com</string>
    <string name="about_company_website">www.mengbaobao.com</string>
    <string name="change_pwd">修改密码</string>
    <string name="agreement">使用协议</string>
    <string name="setting_version">版本号%s</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码（6~16位数字、字母）</string>
    <string name="confirm_pwd">新密码（再输入一次新密码）</string>
    <string name="doctor">医生</string>
    <string name="hospital">医院</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="search_hint">搜索医院、医生</string>
    <string name="history_search">历史搜索</string>
    <string name="doctor_info_choose_me">选我</string>
    <string name="doctor_info_speciality">擅长</string>
    <string name="doctor_info_introduce">医生介绍</string>
    <string name="height_reference_value">参考值：85.11~97.33厘米</string>
    <string name="height_title">家庭正确的身长测量方法</string>
    <string name="height_content">3岁之前的宝宝应采用仰卧位测量，称为身长。\n脱去帽、鞋、袜，穿单衣仰卧于量床底板中线上。\n助手将头扶正，头顶接触头版，宝宝面向上。\n测量者位于宝宝右侧，左手握住双膝，使腿伸直，右手移动足板使其接触两侧足跟。\n（图示，此方法较精准的测量请在医院进行）</string>
    <string name="weight_reference_value">参考值：10.6~15.31公斤</string>
    <string name="weight_title">家庭正确的体重测量方法</string>
    <string name="weight_content">测量体重尽量在相同的室温下，尽量在26~28°c。\n测量前应检查磅秤的零点。在宝宝空腹、排空大小便，裸体或穿背心的情况下进行。\n如果条件不允许脱成单衣单裤，应设法扣除衣物重量，取得净重。\n称体重时，婴儿可卧位（图示）</string>
    <string name="weight_suggest">    每一次的测量应该与第一次的测量环境、穿着情况（裸体或仅穿内衣）尽量相同，才能尽量保证测量的精准。</string>
    <string name="head_reference_value">参考值：48.78厘米</string>
    <string name="head_reference_dest">参考值引用WHO标准</string>
    <string name="head_diff_value">标准差：1.27厘米</string>
    <string name="head_diff_desc">标准差指的是平均值的上下标准差</string>
    <string name="head_title">家庭正确的头围测量方法</string>
    <string name="head_content">取坐位或立位。测量者立于被测者之前或右方，用软尺从头部右侧眉弓上缘经枕骨粗隆，从左侧眉弓上缘回至零点，读出头围数字。\n测量时软尺应紧贴皮肤，左右对称。\n测量前要检查软尺刻度是否正确。 头围能够反应宝宝脑和颅骨的发育程度。头部的发育最快为出生后半年。</string>
    <string name="chest_reference_value">参考值：49.50厘米</string>
    <string name="chest_reference_dest">参考值为2005年上海市平均标准</string>
    <string name="chest_diff_value">标准差：1.79厘米</string>
    <string name="chest_diff_desc">标准差指的是平均值的上下标准差</string>
    <string name="chest_title">家庭正确的胸围测量方法</string>
    <string name="chest_content">采用无伸缩性软尺测量\n让宝宝卧位或立位姿势（可扶立时）\n测量者于宝宝前方或右侧，左手拇指固定软尺零点于宝宝右侧乳头下缘，右手持软尺贴宝宝胸壁，经右侧腋下、肩胛下角下缘、左侧腋下、左侧乳头回至零点，读与零点交叉刻度，取平静呼、吸气的中间读数，精确至0.1厘米 胸围反映胸廓、胸背部肌肉、皮下脂肪和肺的发育 。</string>
    <string name="cacation_content">你一开始让宝宝进食固体食物，宝宝的大便会更硬，颜色也会发生变化。 由于糖和脂肪的进食量增加，所以气味也更臭；豆类和其他蔬菜可</string>
    <string name="micturition_content">宝宝每1–3小时就可能需要排尿，母乳喂养的宝宝 每日6–7次，次数较少时可能每天4-6次。 如果生病了或是发热以及天气炎热时</string>
    <string name="night_sleep_time">夜间睡眠时间</string>
    <string name="night_sleep_content">参考值：平均夜间睡眠时间为11个小时，平均日间睡眠时间为2.5小时，平均总计睡眠时间13.5小时。</string>
    <string name="day_sleep_time">日间睡眠时间</string>
    <string name="day_sleep_content">参考值：平均夜间睡眠时间为11个小时，平均日间睡眠时间为2.5小时，平均总计睡眠时间13.5小时。</string>
    <string name="brest_fedding_count">人乳喂养次数</string>
    <string name="brest_reference_value">参考值：300~400毫升</string>
    <string name="brest_fedding_title">母乳喂养</string>
    <string name="brest_fedding_content">每次哺乳前，母亲应洗净双手。 正确的喂哺姿势有斜抱式、卧式、抱球式。无论 用何种姿势，母亲都必须使自己，特别是背部保 持放松</string>
    <string name="other_fedding_count">配方奶喂养次数</string>
    <string name="other_reference_value">参考值：300~400毫升</string>
    <string name="other_fedding_title">奶制品喂养</string>
    <string name="other_fedding_content">牛乳过敏-对确诊牛乳过敏的婴儿，人乳喂养时间 应延长至12~18个月；如不能进行人乳喂养而牛乳 过敏的婴儿应首选氨基酸配方或深</string>
    <string name="month_age">月龄</string>
    <string name="height_cm">身长cm</string>
    <string name="weight_kg">体重kg</string>
    <string name="baby_name">宝宝姓名</string>
    <string name="baby_gender">宝宝性别</string>
    <string name="baby_birthday">出生日期</string>
    <string name="baby_gestational_age">孕周(胎龄)</string>
    <string name="baby_gestational_age_2">孕周</string>
    <string name="phone">联系手机</string>
    <string name="birth_weight">出生体重</string>
    <string name="birth_height">出生身长</string>
    <string name="parity_count">胎次</string>
    <string name="birth_count">产次</string>
    <string name="birth_age">母亲生育年龄</string>
    <string name="birth_state">出生状态</string>
    <string name="single_birth">单胎</string>
    <string name="polyembryony">多胎</string>
    <string name="parturition_state">分娩状态</string>
    <string name="eutocia">顺</string>
    <string name="breech">臀</string>
    <string name="odinopoeia">引</string>
    <string name="parturition">产</string>
    <string name="cesarean">剖</string>
    <string name="assisted_reproduction">辅助生育</string>
    <string name="artificial_insemination">人工授精</string>
    <string name="tube_baby">试管婴儿</string>
    <string name="none">无</string>
    <string name="has">有</string>
    <string name="birth_injury">产伤</string>
    <string name="stifle">新生儿窒息</string>
    <string name="ICH">颅内出血</string>
    <string name="genetic_history">家族遗传史</string>
    <string name="allergy_disease">家族过敏疾病</string>
    <string name="pervious_history">既往史</string>
    <string name="choleplania">黄疸</string>
    <string name="ACHD">先心</string>
    <string name="hearing_disorder">听力障碍</string>
    <string name="rethinopthy">视网膜病变</string>
    <string name="PKU">PKU（高苯丙氨酸血症）</string>
    <string name="lower_weight_baby">低体重儿</string>
    <string name="EUGR">发育迟缓</string>
    <string name="neoplastic_disease">肿瘤性疾病</string>
    <string name="hydrocephalus">脑积水</string>
    <string name="CH">甲状腺功能低下</string>
    <string name="enteritis">小肠炎</string>
    <string name="rickets">佝偻病</string>
    <string name="anemia">贫血</string>
    <string name="CAH">CAH（21-羟化酶缺乏症）</string>
    <string name="fat">肥胖</string>
    <string name="malnutrition">营养不良</string>
    <string name="develop_lower">生长迟缓</string>
    <string name="epilepsy">癫痫</string>
    <string name="genetic_disease">遗传性疾病</string>
    <string name="PD">G-6-PD缺乏症</string>
    <string name="leukemia">白血病</string>
    <string name="asthma">哮喘</string>
    <string name="pneumonia">肺炎</string>
    <string name="allergy">过敏</string>
    <string name="HIE">缺氧缺血性脑病</string>
    <string name="chronic_disease">慢性疾病</string>
    <string name="other_disease">其他</string>
    <string name="culture">文化程度</string>
    <string name="choose">请选择</string>
    <string name="primary">小学及以下</string>
    <string name="junior">初中</string>
    <string name="senior">高中</string>
    <string name="university">大学</string>
    <string name="master">硕士</string>
    <string name="doctor_culture">博士</string>
    <string name="father_name">父亲姓名</string>
    <string name="father_height">身高（父亲）</string>
    <string name="father_weight">体重（父亲）</string>
    <string name="father_BMI">BMI（父亲）</string>
    <string name="mother_name">母亲姓名</string>
    <string name="mother_height">身高（母亲）</string>
    <string name="mother_weight">体重（母亲）</string>
    <string name="mother_BMI">BMI（母亲）</string>
    <string name="oberve_matter">观察要点</string>
    <string name="head_image">个人头像</string>
    <string name="scan">扫码</string>
    <string name="scan_photo_album">相册</string>
    <string name="scan_hint">对准二维码</string>
    <string name="record">记录</string>
    <string name="record_month_age">%s个月%s天</string>
    <string name="record_hint_message">限制500字以内</string>
    <string name="record_really_month">实际月龄:</string>
    <string name="record_correct_month">矫正月龄</string>
    <string name="record_measure_info">测量信息</string>
    <string name="record_head_circumference">头围</string>
    <string name="record_chest_circumference">胸围</string>
    <string name="record_cacation">排便</string>
    <string name="record_micturition">排尿</string>
    <string name="record_night_sleep">夜间睡眠</string>
    <string name="record_day_sleep">日间睡眠</string>
    <string name="record_fedding_info">喂养情况</string>
    <string name="record_breastfeeding_title">母乳喂养</string>
    <string name="record_breastfeeding">人乳喂养量</string>
    <string name="record_breastfeeding_count">人乳喂养次数</string>
    <string name="record_formula_milk_title">配方奶喂养</string>
    <string name="record_formula_milk">配方奶喂养量</string>
    <string name="record_formula_milk_count">配方奶喂养次数</string>
    <string name="record_assisted_food_add">辅食添加</string>
    <string name="record_milk">牛奶</string>
    <string name="record_milk_powder">奶粉</string>
    <string name="record_flour">米粉</string>
    <string name="record_food">面食</string>
    <string name="record_porridge">粥</string>
    <string name="record_rice">饭</string>
    <string name="record_meat">荤菜（鱼肉肝）</string>
    <string name="record_egg">全蛋或蛋黄</string>
    <string name="record_bean">豆制品</string>
    <string name="record_vegetables">蔬菜</string>
    <string name="record_fruit">水果</string>
    <string name="record_water">水</string>
    <string name="record_vitamin">维生素</string>
    <string name="dialog_title_notification">请允许我们向您发送通知</string>
    <string name="dialog_content_notification">让您不错过每一条月龄指导</string>
    <string name="contentDescription">image</string>
</resources>