<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <include layout="@layout/include_title_back"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y47px">
                <RelativeLayout
                    android:layout_width="@dimen/x233px"
                    android:layout_height="@dimen/y86px"
                    android:layout_centerHorizontal="true"
                    >
                    <EditText
                        android:id="@+id/et_input_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        style="@style/InputDataStyle"
                        android:text=""
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cent"
                    android:layout_centerVertical="true"
                    style="@style/GrayText26px"
                    android:layout_marginLeft="@dimen/x490px"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y32px">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_reference_value"
                    style="@style/LinkPinkText23px"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/x76px"
                    />

                <View
                    android:layout_width="@dimen/x10px"
                    android:layout_height="@dimen/x10px"
                    android:background="@drawable/bg_circle_point_10"
                    android:layout_marginLeft="@dimen/x310px"
                    android:layout_centerVertical="true"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_reference_dest"
                    style="@style/GrayText21px"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/x329px"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y32px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_diff_value"
                    style="@style/LinkPinkText23px"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/x76px"
                    />

                <View
                    android:layout_width="@dimen/x10px"
                    android:layout_height="@dimen/x10px"
                    android:background="@drawable/bg_circle_point_10"
                    android:layout_marginLeft="@dimen/x310px"
                    android:layout_centerVertical="true"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_diff_desc"
                    style="@style/GrayText21px"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/x329px"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="@dimen/x681px"
                android:layout_height="@dimen/y1px"
                android:background="@color/linePink"
                android:layout_marginTop="@dimen/y24px"
                ></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest_title"
                style="@style/BlackText34px"
                android:layout_marginTop="@dimen/y43px"
                android:includeFontPadding="false"
                />

            <TextView
                android:layout_width="@dimen/x574px"
                android:layout_height="wrap_content"
                android:text="@string/chest_content"
                style="@style/BlackText26px"
                android:layout_marginTop="@dimen/y28px"
                android:includeFontPadding="false"
                />

            <RelativeLayout
                android:id="@+id/rl_play_move"
                android:layout_width="@dimen/x447px"
                android:layout_height="@dimen/y311px"
                android:background="@drawable/bg_baby_height"
                android:layout_marginTop="@dimen/y48px"
                >
                <ImageView
                    android:layout_width="@dimen/y94px"
                    android:layout_height="@dimen/y94px"
                    android:src="@drawable/btn_play"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>